Safari365 Prod/src/objects/Consultant_Target_Yearly__c.object
<CustomObject>
    <fields>
        <fullName>Average_Achieved_Conversion_Ratio__c</fullName>
        <formula>Total_Converted_Opportunity__c / Total_Lead1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Achieved Conversion Ratio (Annual)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Average_of_Conversion_Ratio__c</fullName>
        <label>Target Conversion Ratio (Annual)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ConsultantIdKeyYear__c</fullName>
        <formula>CASESAFEID(Consultant__r.Id)+Text(Year__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ConsultantIdKeyYear</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consultant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consultant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Consultant_Target_Yearly</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Conversion_Ratio_Target_Surplus_Deficit__c</fullName>
        <formula>Average_Achieved_Conversion_Ratio__c -  Average_of_Conversion_Ratio__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conversion Ratio Target Surplus/Deficit</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CounsltantIdAndYearKey__c</fullName>
        <externalId>true</externalId>
        <label>CounsltantIdAndYearKey</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Rollup_Annual__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Rollup (Annual)</label>
        <referenceTo>Consultant_Target_Lead_Yearly__c</referenceTo>
        <relationshipLabel>GP Rollup (Annual)</relationshipLabel>
        <relationshipName>GP_Rollup_Annual</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target_To_Be_Achieved__c</fullName>
        <formula>Total_Target_Achieved__c - Total_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Profit Target Surplus/Deficit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Converted_Opportunity__c</fullName>
        <label>Total Converted Opportunity</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Lead1__c</fullName>
        <formula>Lead_Rollup_Annual__r.Consultant_Target_Lead_Achieved__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Lead</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Lead__c</fullName>
        <label>Total Lead</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Target_Achieved__c</fullName>
        <label>Total Annual Gross Profit Achieved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Target__c</fullName>
        <label>Total Annual Gross Profit Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Year</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>of_GP_Target_Achieved_Annual__c</fullName>
        <formula>Total_Target_Achieved__c /  Total_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% of GP Target Achieved (Annual)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <label>Individual Cons. GP Rollup (Annual)</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Consultant__c</columns>
        <columns>Year__c</columns>
        <columns>Total_Target_Achieved__c</columns>
        <columns>Total_Target__c</columns>
        <columns>of_GP_Target_Achieved_Annual__c</columns>
        <columns>Target_To_Be_Achieved__c</columns>
        <columns>Average_Achieved_Conversion_Ratio__c</columns>
        <columns>Average_of_Conversion_Ratio__c</columns>
        <columns>Conversion_Ratio_Target_Surplus_Deficit__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CTY-{00000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Individual Cons. GP Rollup (Annual)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>